<!--
  Copyright 2015 Blanyal D'Souza.

  Licensed under the Apache License, Version 2.0 (the "License");
  you may not use this file except in compliance with the License.
  You may obtain a copy of the License at

      http://www.apache.org/licenses/LICENSE-2.0

  Unless required by applicable law or agreed to in writing, software
  distributed under the License is distributed on an "AS IS" BASIS,
  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  See the License for the specific language governing permissions and
  limitations under the License.
  -->
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/mainActivityView">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:fab="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/colorPrimary"
            android:minHeight="?attr/actionBarSize"
            app:contentInsetLeft="0dp"
            app:contentInsetStart="16dp"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
            app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

            <ImageButton
                android:id="@+id/settings"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_gravity="end"
                android:layout_marginEnd="10dp"
                android:layout_marginRight="10dp"
                android:background="@null"
                android:clickable="true"
                android:contentDescription="@string/info_setting_btn"
                android:focusable="true"
                android:src="@drawable/ic_setting_while_24dp" />

            <ImageButton
                android:id="@+id/sorting"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_gravity="end"
                android:layout_marginEnd="10dp"
                android:layout_marginRight="10dp"
                android:background="@null"
                android:clickable="true"
                android:contentDescription="@string/info_sort_btn"
                android:focusable="true"
                android:src="@drawable/ic_sort_white_24dp"
                android:onClick="showDropDownMenu" />
        </android.support.v7.widget.Toolbar>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/reminder_list"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/toolbar" />

        <TextView
            android:id="@+id/no_reminder_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:gravity="center"
            android:padding="16dp"
            android:text="@string/no_reminders"
            android:visibility="gone" />

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_below="@+id/toolbar"
            android:background="@drawable/toolbar_dropshadow" />

        <com.getbase.floatingactionbutton.AddFloatingActionButton
            android:id="@+id/add_reminder"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginBottom="15dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:clickable="true"
            android:focusable="true"
            fab:fab_colorNormal="@color/accent"
            fab:fab_colorPressed="@color/fab_pressed" />

    </RelativeLayout>

</android.support.design.widget.CoordinatorLayout>
