...
        android:layout_below="@+id/toolbar"
        android:background="@color/primary"
        android:orientation="vertical"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <EditText
            android:id="@+id/reminder_title"
            android:layout_width="match_parent"
            android:layout_height="140dp"
            android:layout_marginLeft="72dp"
            android:layout_marginRight="16dp"
            android:gravity="top|left"
            android:hint="@string/add_reminder"
...
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="32dp"
                    android:src="@drawable/ic_sync_grey600_24dp" />

                <LinearLayout
                    android:id="@+id/repeat_ll"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_toRightOf="@id/repeat_icon"
                    android:orientation="vertical">

...
